Fixed alignment of text box

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -28,3 +28,8 @@ textarea {
     padding-top: 0px;
   }
 }
+
+label{
+  text-align: left;
+  display: block
+}
